# bart

./: .gitignore.main  CMakeLists.txt
src/: CMakeLists.txt  pics.c
src/calib/: CMakeLists.txt
src/geom/: CMakeLists.txt
src/grecon/: CMakeLists.txt
src/ismrm/: CMakeLists.txt
src/iter/: CMakeLists.txt
src/lapacke/: CMakeLists.txt
src/linops/: CMakeLists.txt
src/lowrank/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/moba/: CMakeLists.txt
src/motion/: CMakeLists.txt
src/networks/: CMakeLists.txt
src/nlops/: CMakeLists.txt
src/nn/: CMakeLists.txt
src/noir/: CMakeLists.txt
src/noncart/: CMakeLists.txt  nufft.c
src/num/: CMakeLists.txt
src/python/: CMakeLists.txt
src/sake/: CMakeLists.txt
src/sense/: CMakeLists.txt
src/simu/: CMakeLists.txt
src/wavelet/: CMakeLists.txt
src/win/: CMakeLists.txt
tests/: pics.mk
