cmake_minimum_required(VERSION 3.22)

set(BART_SRC_ITER
        admm.c
        admm.h
        asl.c
        asl.h
        batch_gen.c
        batch_gen.h
        italgos.c
        italgos.h
        iter_dump.c
        iter_dump.h
        iter.c
        iter.h
        iter2.c
        iter2.h
        iter3.c
        iter3.h
        iter4.c
        iter4.h
        iter5.c
        iter5.h
        iter6_ops.c
        iter6_ops.h
        iter6.c
        iter6.h
        itop.c
        itop.h
        lad.c
        lad.h
        lsqr.c
        lsqr.h
        misc.c
        misc.h
        monitor_iter6.c
        monitor_iter6.h
        monitor.c
        monitor.h
        niht.c
        niht.h
        proj.c
        proj.h
        prox.c
        prox.h
        prox2.c
        prox2.h
        tgv.c
        tgv.h
        thresh.c
        thresh.h
        vec.c
        vec.h
)
add_library(iter_lib ${BART_SRC_ITER})
