cmake_minimum_required(VERSION 3.22)

set(BART_SRC_LAPACKE
        lapacke_cge_nancheck.c
        lapacke_cge_trans.c
        lapacke_cgees_work.c
        lapacke_cgees.c
        lapacke_cgesdd_work.c
        lapacke_cgesdd.c
        lapacke_cgesvd_work.c
        lapacke_cgesvd.c
        lapacke_che_nancheck.c
        lapacke_che_trans.c
        lapacke_cheev_work.c
        lapacke_cheev.c
        lapacke_chegv_work.c
        lapacke_chegv.c
        lapacke_cpo_nancheck.c
        lapacke_cpo_trans.c
        lapacke_cpotrf_work.c
        lapacke_cpotrf.c
        lapacke_ctr_nancheck.c
        lapacke_ctr_trans.c
        lapacke_ctrsyl_work.c
        lapacke_ctrsyl.c
        lapacke_ctrtri_work.c
        lapacke_ctrtri.c
        lapacke_ctrtrs_work.c
        lapacke_ctrtrs.c
        lapacke_lsame.c
        lapacke_mangling.h
        lapacke_nancheck.c
        lapacke_utils.h
        lapacke_xerbla.c
        lapacke_zge_nancheck.c
        lapacke_zge_trans.c
        lapacke_zgees_work.c
        lapacke_zgees.c
        lapacke_zgesdd_work.c
        lapacke_zgesdd.c
        lapacke_zhe_nancheck.c
        lapacke_zhe_trans.c
        lapacke_zheev_work.c
        lapacke_zheev.c
        lapacke_ztr_nancheck.c
        lapacke_ztr_trans.c
        lapacke.h
)
if(NOLAPACKE)
    add_library(lapacke_lib ${BART_SRC_LAPACKE})
endif()
